--- a/server/Makefile
+++ b/server/Makefile
@@ -1,11 +1,14 @@
-CC = ${CROSS_COMPILE}gcc
+CC ?= ${CROSS_COMPILE}gcc
+CFLAGS ?= -g -Wall -Werror
+TARGET ?= aesdsocket
+LDFLAGS ?= -lpthread -lrt
 
 default: all
 
 all: aesdsocket
 
 aesdsocket: aesdsocket.c
-	${CC} $^ -o $@ -lpthread
+	${CC} $(CFLAGS) $^ -o $@ $(INCLUDES) $(LDFLAGS)
 
 .PHONY: clean
 clean:
