changing DATA_FILE

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 CC ?= ${CROSS_COMPILE}gcc
 CFLAGS ?= -g -Wall -Werror
-CFLAGS += -DUSE_AESD_CHAR_DEVICE=1
+CFLAGS += -D USE_AESD_CHAR_DEVICE = 1
 TARGET ?= aesdsocket
 LDFLAGS ?= -lpthread -lrt
 
